--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+.logo {
+    width: 100px;
+    height: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.image-background {
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height: 100%;
+
+    background-image: url(https://cdn.pixabay.com/photo/2020/04/25/12/14/tech-5090539_1280.jpg)
+}
+.check-integrity-background {
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height: 100%;
+
+    background-image: url('https://cdn.pixabay.com/photo/2020/04/25/12/14/tech-5090539_1280.jpg');
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.custom-full-height {
+    height: calc(100vh - 50px);
 }
